Style: Force always Scrollbar so the navigation bar position is always correct

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -495,3 +495,7 @@ footer {
   align-items: center;
   justify-content: center;
 }
+
+html {
+  overflow-y: scroll;
+}
